replacing decimal2p with custom version removing unnecessary console prints improving documentation restructuring package
